# bambora-rs

./: Cargo.toml  Makefile  README.md
crates/openapi/: README.md
crates/openapi/.openapi-generator/: FILES
crates/openapi/docs/: Address.md  Adjustment.md  BamboraException.md  Card.md  CardGetTransactionResponse.md  CardPurchaseResponse.md  CreateProfileBody.md  Criteria.md  Custom.md  Detail.md  GetProfileDefaultCard.md  Link.md  ModelReturn.md  PaymentProfile.md  PaymentRequest.md  PaymentResponse.md  PaymentsApi.md  ProfileCard.md  ProfileCards.md  ProfileFromCard.md  ProfileFromToken.md  ProfileGetCards.md  ProfilePurchase.md  ProfileResponse.md  ProfileToken.md  ProfilesApi.md  ReportingApi.md  SearchQuery.md  SearchRecord.md  SearchResult.md  TokenPurchase.md  TokenRequest.md  TokenResponse.md  TokenizationApi.md  Transaction.md  UpdateProfileBody.md  Void.md
crates/openapi/src/apis/: configuration.rs  mod.rs  payments_api.rs  profiles_api.rs  reporting_api.rs  tokenization_api.rs
crates/openapi/src/models/: address.rs  adjustment.rs  bambora_exception.rs  card.rs  card_get_transaction_response.rs  card_purchase_response.rs  create_profile_body.rs  criteria.rs  custom.rs  detail.rs  get_profile_default_card.rs  link.rs  mod.rs  model_return.rs  payment_profile.rs  payment_request.rs  payment_response.rs  profile_card.rs  profile_cards.rs  profile_from_card.rs  profile_from_token.rs  profile_get_cards.rs  profile_purchase.rs  profile_response.rs  profile_token.rs  search_query.rs  (+8 more)
examples/: payment_get.rs
openapi/: na_bambora_v1.yaml
src/: lib.rs
